[package]
name = "Server"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
chrono = "0.4"
colored = "2.0"
backtrace = "0.3"
aes = "0.7"
block-modes = "0.8"
rand = "0.8"
hex = "0.4"
byteorder = "1.4"
lazy_static = "1.5.0"
generic-array = "1.2.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
bincode = "1.3"
public-ip-address = { version = "0.3", features = ["encryption"] }
tokio = { version = "1", features = ["full"] }
warp = { version = "0.4.2", features = ["server"] }
tokio-tungstenite = "0.15"
futures = "0.3"
